# DQN

./: CMakeLists.txt  CMakePresets.json  LICENSE-3RD-PARTY.txt  README.md
include/dqn/: Q.h
src/: CMakeLists.txt
src/dqn/: ModelDueling.cpp  ModelDueling.h  Q.cpp
src/neural_network/: Model.cpp  Model.h
src/neural_network/layers/: Layer.cpp  Layer.h  LayerConv2D.cpp  LayerConv2D.h  LayerDense.cpp  LayerDense.h  LayerFlatten.cpp  LayerFlatten.h  LayerMaxPooling2D.cpp  LayerMaxPooling2D.h
src/neural_network/model/: ModelBase.cpp  ModelBase.h  ModelCall.h
src/neural_network/utils/: ActivationFunctions.h  ConvoluteFunction.h  ConvoluteFunctions.h  GradientMapFwd.h  PoolFunctions.h  TapeFwd.h  TrainableVarsMapFwd.h
